<resources>
    <string name="app_name">MoviiSky</string>
    <string name="title_activity_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="movies_around_you_search_movie_n_is_getting_easier">Movies around you | Search Movie \n is getting easier</string>
    <string name="search_movie">Search Movie</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="about_MoviiSky">About MoviiSky</string>
    <string name="setting">Setting</string>
    <string name="change_language">Change Language</string>
    <string name="title_search_greeting">Here, you can find movie you like the most!</string>
    <string name="message_search_greeting">Tip: Put relevant title to get precise results. Happy searching! :D</string>
    <string name="title_search_no_connection">Upps, no item to show…</string>
    <string name="message_search_no_connection">Perhaps, nothing match your criteria or we already lost connection.  Tip: Please check your search query or your internet connection.</string>
    <string name="hint_search">Search movie</string>
    <string name="result_search">Result for:</string>
    <string name="title_search_no_internet">Upps, no internet connection…</string>
    <string name="message_search_no_internet">Tip: Please check your internet connection.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="press_back_to_exit">Press BACK again to exit</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="something_wrong">There\'s something wrong</string>
    <string name="title_now_playing_greeting">Now Playing Movies</string>
    <string name="message_now_playing_greeting">Here, you can see films that are playing in theaters.</string>
    <string name="title_top_rated_greeting">Top Rated Movies</string>
    <string name="message_top_rated_greeting">Here, you can find Top Rated Movies provided by TMDb</string>
    <string name="title_upcoming_greeting">Upcoming Movies</string>
    <string name="message_upcoming_greeting">Here, you can find Upcoming Movies in theaters.</string>
    <string name="all_about_movie">** all about movie **</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="upps_no_item_to_show">Upps, no item to show...</string>
    <string name="you_have_not_added_any_movies">You haven\'t added any movies to favorites. You can add it from Movie Detail.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="there_s_no_favorite_movie_yet">There\'s no Favorite Movie, yet!</string>
</resources>
